# yral-auth-v2

./: .env.example  .gitignore  Cargo.toml  Dockerfile  flake.nix  fly-prod.toml  fly-staging.toml  fly.toml  preview-fly.toml  rust-toolchain.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: build-check.yml  build-check.yml.bak  deploy-hetzner.yml  deploy-main-fly.yml  deploy-main.yml  deploy-staging.yml  preview-fly.yml  preview.yml  rotate-ssh.yml  upload-secrets-on-vault.yml
deploy/: Caddyfile  Dockerfile  docker-compose.yml  entrypoint.sh
deploy/fly-redis-proxy/: Dockerfile  entrypoint.sh  fly_redis_proxy.exp
src/: app.rs  consts.rs  error.rs  lib.rs  main.rs  oauth_provider.rs
src/api/: ai_accounts.rs  identity_provider.rs  mod.rs  oauth_server_impl.rs  phone_auth.rs  phone_auth_tests.rs  server_impl.rs
src/components/: apple_symbol.rs  google_symbol.rs  mod.rs  otp_input.rs  whatsapp_symbol.rs  yral_symbol.rs
src/context/: mod.rs  server.rs
src/context/message_delivery_service/: mod.rs
src/kv/: dragonfly_kv.rs  mod.rs  redb_kv.rs  redis_kv.rs
src/middleware/: http_logger.rs  mod.rs  sentry_scrub.rs  sentry_user.rs
src/oauth/: client_validation.rs  jwk_cache.rs  jwk_rotation.rs  mod.rs
src/oauth/client_validation/: mod.rs  tests.rs  whitelist.rs
src/oauth/jwt/: generate.rs  mod.rs
src/page/: auth.rs  error_page.rs  mod.rs
src/page/oauth_login/: mod.rs  oauth_callback.rs  oauth_redirector.rs  phone_auth_login.rs  server_impl.rs  verify_phone_auth.rs
src/utils/: cookies.rs  identity.rs  mod.rs  server_url.rs
